[metadata]
name = ipscanner
version = 0.1.0
description = A Django app to scan IP networks and export results.
long_description = file: README.md
long_description_content_type = text/markdown
author = Jeremie Rouzet
author_email = your_email@example.com
license = MIT

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    django>=3.2
    scapy

[options.packages.find]
include = ipscanner*, jeyipscan*

[options.entry_points]
console_scripts =
    jeyipscan = jeyipscan.cli:main
